--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -21,3 +21,12 @@
 いい感じだったのに｡  
 愚かだ｡  
 もう一度｢[死を覚悟した話](https://note.com/waniko/n/nc9e56e217f4c)｣を読んで生き方を変えよう｡  
+
+## 僕が行動する理由は欲求に帰着するのか
+
+逆に言えば､欲求に起因しない行動はあるのか｡  
+[欲 - Wikipedia](https://ja.wikipedia.org/wiki/%E6%AC%B2)  
+ありそう｡  
+行動したいと思わないし､行動したあとに快を感じないもの｡  
+例えば､､､思いつかない｡  
+仮にたまたま僕にはそういう行動がないとして､気がついたら記録しよう｡  
