--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -30,3 +30,7 @@
 行動したいと思わないし､行動したあとに快を感じないもの｡  
 例えば､､､思いつかない｡  
 仮にたまたま僕にはそういう行動がないとして､気がついたら記録しよう｡  
+
+## 莊子の思考に親近感が湧いた
+
+## 中学4年生を卒業したら､一旦忙しく働いて､その後暇になれば自然と勉強したくなる人結構いると思った｡
