--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -36,3 +36,97 @@
 ## 中学4年生を卒業したら､一旦忙しく働いて､その後暇になれば自然と勉強したくなる人結構いると思った｡
 
 ## 15時のまだ一日ある感と､16時のもう今日が終わる感の間で生きている｡
+
+## 返信内容
+
+こちらこそ､僕の考えを言語化する理由を与えてくれてありがとうございます｡  
+
+## 『会社は学校じゃねぇんだよ』観ました
+
+『会社は学校じゃねぇんだよ』観ました｡  
+正直､最初は予告とか無料部分だけ観て面白そうだったら全部観ようと思っていたのですが､結局Abemaプレミアムに登録してしまいました｡  
+物語としてとてもよくまとまっていて､各イベントで展開が想像できたので結果が知りたくなってしまいました｡その点が良くできていると思います｡  
+
+肱黒さんがこの作品が好きな理由が想像できないのですが､どこに惹かれたのですか｡  
+主人公の生き方を美学のように描いていますが､見方を変えれば頑張ろうとしている人をいじめているようにみえる気もします｡  
+
+アニメばかり観る僕にドラマを紹介してくれたので､それにも触れると､  
+僕はアニオタなので､完全創作のアニメーション作品と､一部創作の実写作品をを比較してみてしまうのですが､  
+実写は現実を使って空想を見せているはずなのに､現実を感じてしまうのが僕は苦手なのかもと気づきました｡  
+対して､アニメは空想を使って空想が見せられているので違和感を感じません｡僕が処理できる以上の情報を与えてこない｡  
+技術的に進歩して､現実を介さなくても現実味のある物語を見せることができるようになったのに､  
+不完全な現実を見せられているのは､共感を支配しようとしている意図があるように思います｡  
+現実から誰かの頭の中にある空想を切り抜いたら､不完全な現実ができるのは理解できるはず｡  
+
+と書いていて､僕の中に現実は現実であってほしいと思うバイアスがあるのかもしれないと今思いました｡  
+僕は何を信じて生きれば良いのか分からなくなってしまう｡  
+どんなに､幸せな物語があっても､逆に不幸な物語があっても､  
+
+現実の人間が空想に対して熱狂している姿をとても美しく感じてしまう｡  
+初音ミクのライブで､叫んている人をみて胸が熱くなりとても心地よい気分で満たされる｡    
+
+僕の感性では､現実味を感じさせるために不完全な現実を見せられて生まれる感情は空想の中の感情のように感じる｡  
+空想だと理解していながら完全な空想を見せられて生まれる感情のほうが現実味がある｡  
+
+現実で個人の意思で行動すること､空想を  
+
+それはそれとして､せっかくアニオタの僕にドラマ作品を紹介してくれたので､僕が実写を嫌い(嫌いってほどでもないけど)アニメ(ここではデジタルアニメーション)を好むのかを言語化しようと考えていたのですが､  
+皆さんは実写よりもアニメのほうが現実味を感じることはありますか?(実写は現実味を出すためにこの手法を用いているという理解の前提で)  
+
+## 既得権益者などと戦う必要があるという意見の持ち主に対して､僕が返したこと
+
+前提として､僕ができることには物理的に限界があるので､そういった人たちの相手をするリソースがもったいないと思っている｡  
+
+それと､僕には肱黒さんに見えているレールは見えない｡個人にとってそれぞれが最適な選択ができれば､それで良い｡  
+がしかし､現時点で選択や調達ができない人がいるのも確かにそう｡  
+僕は最初､そういう人たちがいるのは､極論を言ってしまえば､国に力がないからだと考えた｡最低限の生活と安全と健康､学びたいと言う人への教育環境がくまなく提供できていない｡  
+でも､逆にできている国はあるのだろうか｡見つからない｡  
+今まで国を支えてきた人たちは何をやってきたのだろうか｡宇野さんの世代で､世界が見える人たちは､僕ら若者に謝っている｡  
+あぁ､そうか｡そもそも僕が生まれたこの世界は､誰かがどこかで個人それぞれの価値観で行動してできているんだ｡  
+国や社会や組織の人格はまやかしで､結局､現実を変えることができるのは個人の価値観によって駆動された行動だけなんだ｡  
+
+社会課題なんて､ないんだと思う｡なんかよく分からない社会って呼ばれているものが課題を持っているのではなく､個人がxxxは課題だと個人の価値観で判断しただけ｡  
+それを､よく分からないただ人が集まっただけの社会の持ち物にしてほしくない｡  
+社会を運営している意識があるなら､社会課題と呼ばれているもののほとんどは､自分の課題｡  
+自分が課題だと判断したもののうち､自分が行動することでどうしても解決したいことは行動する｡  
+それ以外の課題だと判断したしたけど､自分では行動できないものは社会運営者や後世に謝る｡  
+僕はそうやって生きる｡
+
+既得権益者の一部がそうでない人に､未熟な言動をしていることは､僕にとって課題ではある｡が､他に解決することにもっと価値がある課題がある｡僕は僕の持っている限られたリソースを後者のために使う｡  
+僕が何もかもやり尽くしたあとに､未熟な言動を繰り返す既得権益者がいたときは､その被害者に謝る｡  
+
+ただそれだけ｡  
+
+## 現実味を感じるってなんなのだろうという問への返信
+
+誰かが答えてくれたら､僕は
+｢僕の感性では､現実味を感じさせるために不完全な現実を見せられて生まれる感情は空想の中の感情のように感じる｡
+空想だと理解していながら完全な空想を見せられて生まれる感情のほうが現実味がある｡｣
+と答えようと準備していたのですが､現実味を感じるとはなんなのかと問われるともうちょっと考えたい｡
+
+## ｢世界観｣がキーワードな気がした
+
+SAOが世界観を作っているのではなく､ある世界にSAOという物語がたまたまあったから僕はそれに惹かれるのかもしれない｡
+現実という世界観にSAOという物語があることを僕は受け入れる態勢が整っていないのかもしれない｡
+僕にとって現実という世界はの世界観は完成していて､そこで生まれる物語はすべて現実である｡
+僕にとって現実という完成した世界観のなかに異界である誰かの空想が存在することが不自然だと感じる｡
+僕にとってSAOという世界は完成していて､そこで生まれる物語はすべて現実である｡
+僕にとってSAOという完成した世界観のなかに異界である誰かの空想が存在することは存在するのか?現実を基として存在する世界だと理解しているから現実と区別されて
+
+作者の空想が世界で､その世界で生きる作者の世界観
+
+現時点で記述不可能な現実を
+
+## 人間にとって､｢世界｣とは空想である
+
+現実とは状態である｡
+
+## ドラマをアップデートの回を観た
+
+たまたまP10を手にとったので､マタギドライヴのところを読んでいたら､元になったNewsPicksのWeekly Ochiaiが観たくなったので観た｡  
+そのページでたまたま｢ドラマをアップデート｣という回が目に入ったので観た｡  
+その中で落合さんが､事前知識がある状態で観るドラマにリアリティーを感じない､ということを言っていた｡  
+人間の文化的な嗜好として､見立てを美しいと感じる一方で､ドラマの多くはリアリティーを追求するが､人間は見立てとしてそれを観るようになったことで嘘くささを感じる｡  
+現実をよく知る現代人にとって､現実を用いてフィクションを見せられれば嘘くさく思うのは納得できる｡  
+ドラマではあんなふうに描かれていたけれど､実際はそうではないよねって潜在的に思ってしまう｡  
+その点､アニメはそもそも僕らとは生きている世界とは違う世界の話をし始めているので､そもそも嘘くさいという感情は生まれてこない｡  
