道着が着たくなった回

--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -277,3 +277,14 @@ https://www.metro.tokyo.lg.jp/tosei/hodohappyo/press/2018/08/24/documents/05_00.
 僕は腐ったクソみたいな感覚に負けたけれど､負けていたことに気がついてからじゃないと勝ち方を考えられないからね｡  
 考えられるということはまだ生きてる｡  
 頑張って生きよう｡  
+
+## ｢僕は社会に投入されたリソースだと思っている｣
+
+以前､僕が最も尊敬しているエンジニアのかどっぺさんとランチに行った帰りに僕が言ったこと｡  
+もう一度考えたい｡  
+
+## なんだか道着を着たくなった
+
+ヨガをやってたら､道着を着たい気分になった｡  
+かっこいいよね｡  
+もうほとんど忘れたけれど､黒帯とるまでやってみるのもあり｡  
