本番の緊張について考えた回

--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -288,3 +288,20 @@ https://www.metro.tokyo.lg.jp/tosei/hodohappyo/press/2018/08/24/documents/05_00.
 ヨガをやってたら､道着を着たい気分になった｡  
 かっこいいよね｡  
 もうほとんど忘れたけれど､黒帯とるまでやってみるのもあり｡  
+
+## 人間にとって働くとは
+
+## 人類の知見はシステムと個人に蓄積される
+
+どこかに保存しただけの知見はその効果を完全に発揮できない｡  
+システムに落とし込めば多くの人にとって効果が出せる｡  
+個人に蓄積された知見は個人にとって効果が出せる｡  
+
+## 本番で緊張するのはそれに向けて本気で取り組んだから
+
+高校受験とかめっちゃ緊張したよ｡  
+だけど､もう学校辞めるって決めたあとの定期テストとか､まじでやる気なかったら全く緊張しなかった｡  
+っていうのをGuianoの話聞いてそのとおりだと思った｡  
+でもさ､行きたい会社の面接とかって本気で準備したら緊張するのかな｡  
+プレイドのときは緊張しなかったんだけど､本気度が低かったのかな｡  
+今は本気で準備しているので､次の面接は緊張するかもしれない｡楽しみ｡  
