包丁で怪我した回

--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -305,3 +305,9 @@ https://www.metro.tokyo.lg.jp/tosei/hodohappyo/press/2018/08/24/documents/05_00.
 でもさ､行きたい会社の面接とかって本気で準備したら緊張するのかな｡  
 プレイドのときは緊張しなかったんだけど､本気度が低かったのかな｡  
 今は本気で準備しているので､次の面接は緊張するかもしれない｡楽しみ｡  
+
+## 自炊歴1年にしてついに包丁で手のひらをぶっさした
+
+痛い｡  
+200gのバターブロックを10gずつに包丁を使わないで切り分けるソリューションが必要｡  
+包丁にくっつくバターもったいないしね｡  
