表現について考えた回

--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -311,3 +311,39 @@ https://www.metro.tokyo.lg.jp/tosei/hodohappyo/press/2018/08/24/documents/05_00.
 痛い｡  
 200gのバターブロックを10gずつに包丁を使わないで切り分けるソリューションが必要｡  
 包丁にくっつくバターもったいないしね｡  
+
+## アルコールは1日にどれくらい摂取しても問題ないとされているのか
+
+純アルコール量20gくらいまでなら生活習慣病のリスクは無視できるらしい  
+`純アルコール量g = ${酒の量ml} * ${アルコール度数} / 100 * 0.8`
+
+## どこ見れば良さそう?
+
+May I get to know where should I take a look at first?
+
+Any specific place I should start looking?
+
+## やるぜ!
+
+I'd be interested in grabbing this issue.
+
+I'm willing to try out this issue.
+
+We'll work on this!
+
+## AIきりたんが多くの人間が聞いても違和感を感じないレベルに近づいた
+
+音声合成に技術にはずっと興味ある｡  
+https://ja.wikipedia.org/wiki/%E9%9F%B3%E5%A3%B0%E5%90%88%E6%88%90  
+https://www.wikiwand.com/en/Speech_synthesis  
+今回のは[SHACHI](https://twitter.com/SHACHI_KRTN)氏が作成した**NEUTRINO**という歌声シンセサイザー  
+Wikipediaで言うとDeep learning-based Synthesisの分類にあたる技術っぽい  
+似たように興奮したもので言うと､Microsoftのりんながすごかった｡  
+別の文脈でで｢表現｣について考えていて､それと関連付けてしまったほうが整理しやすいけど､今は技術にフォーカスするか｡  
+結局､人が(能力的に)操作可能な範囲を超えてテクノロジーが操作してくれている認識｡  
+専門的な部分は正直良くわからないけれど､"人間に近い歌声"==目標となる波形に近づけるために今までは人力+定義された式による計算を行う方法と､  
+今回のような
+
+## 自己が共有外界を編集することが｢表現｣である
+
+特に表現のうち､意識に情報を伝達しようとするとき意識は表現技法を用いる｡  
