壁について考えた回

--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -347,3 +347,15 @@ Wikipediaで言うとDeep learning-based Synthesisの分類にあたる技術っ
 ## 自己が共有外界を編集することが｢表現｣である
 
 特に表現のうち､意識に情報を伝達しようとするとき意識は表現技法を用いる｡  
+
+## 『遅いインターネット』はそれ自体でそれが多くの人間に届かないことを説明している
+
+壁のない世界に生きている人間は､その生き方が現在や未来において豊かになれる可能性があることを最も説明できることを､  
+壁がある世界のルールで生きていて､壁のない世界になると現在のルールで生きていけなくなる人間を説得できない｡  
+と筆者は述べている｡正しいことを言っていると思う｡  
+けど､これはすでに壁のない世界に生きている人間や､壁がある世界を諦めていてかつ､その事実から逃げない人間にしか伝わらない気がした｡  
+他人に理解してもらえないこと自体を自分が理解するのは難しい｡  
+だけど､この構造自体は少し考えれば見えるはず｡  
+そのときの構造が自分の理解していることは､相手の理解していることによって消される形になっていると､人はきっとそれに反発したくなってしまうのだろう｡  
+
+## いわゆる論破されることに対し反抗したくなる感情を起こさずに一旦で良いから考えてほしいというこちらの希望を実現してくれるのか
