共感について考えた回

--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -359,3 +359,27 @@ Wikipediaで言うとDeep learning-based Synthesisの分類にあたる技術っ
 そのときの構造が自分の理解していることは､相手の理解していることによって消される形になっていると､人はきっとそれに反発したくなってしまうのだろう｡  
 
 ## いわゆる論破されることに対し反抗したくなる感情を起こさずに一旦で良いから考えてほしいというこちらの希望を実現してくれるのか
+
+## 共感可能とは想像可能であるということ
+
+つまり想像できたら共感と呼べるのでは｡  
+しかし､感情をオリジナルのまま伝達することは不可能なはずなので､"共感してくれたと思うレベル"は相手の感情を"読み取る"技術が高いほど高くなる｡  
+他方､"共感したレベル"は完全に自己に左右される｡  
+相手の感情は自分に伝達されないので､読み取るしかない｡が､読み取る側の技術力によってオリジナルとの差は顕著に変わるはずだ｡  
+相手の状況を想像可能な範囲で想像し､自己の有している判断基準で批判する｡  
+その批判が相手と近い内容であった場合､共感したと言える｡  
+つまり､想像さえできてしまえば､その想像した内容が事実かどうかに関わらず､自分の感情に反映されてしまう｡  
+自分の"共感したレベル"が高いほど相手の感情との差に気が付きにくいため注意が必要であると考える｡  
+共感してほしいケースがあった場合は対象の相手にあった伝達方法を工夫することで､ただ"共感したレベル"を上げることはできると思う｡  
+前提として共感してほしいと思う内容が事実かどうかはここでは考えない｡  
+
+## といったことを考えていると､共感という概念は受け入れられるけれど､言葉は疑いの目で見てしまう
+
+映画などの物語の中で登場人物のおかれた状況や感情を想像する(見せたり聞かせたりして伝達される)と自然と感情が湧き上がってくる感覚｡  
+例えば単純な例だと､大切なもの同士を天秤にかけなければいけない状況の主人公が､一度は諦めそうににるものの､なんとか両方を勝ち取る物語を鑑賞して､  
+悩む苦しみと困難に立ち向かう勇気と勝利の喜びを伝達される｡  
+これは共感が行われているが､伝達したい内容をいかに伝えるかというゲームなので､違和感を感じない｡  
+が､共感という言葉は､自分が想像したまたは伝達された内容が他人と近かった遠かったということを主張するための言葉として使われがちだと感じる｡  
+最悪､概念としての共感をしたしないという事実は無視されて共感したしなかったことを伝えたいために使われる｡  
+だから僕は､共感したしなかった､共感できるできないといった内容の文章や話は､その状況や物語自体を批評したとは言えないと考えている｡  
+ただ､共感させられたは批評と言える気もする｡  
