スキルの数について考えた回

--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -383,3 +383,18 @@ Wikipediaで言うとDeep learning-based Synthesisの分類にあたる技術っ
 最悪､概念としての共感をしたしないという事実は無視されて共感したしなかったことを伝えたいために使われる｡  
 だから僕は､共感したしなかった､共感できるできないといった内容の文章や話は､その状況や物語自体を批評したとは言えないと考えている｡  
 ただ､共感させられたは批評と言える気もする｡  
+
+## ひとつのスキルだけでは僕の生きたい社会では生きていけない
+
+社会にはいろいろあると思っているし､どんな社会が良いのか悪いのかとかは正直分からないけれど､僕が生きていきたい社会はなんとなく分かる｡  
+過去に､僕はWebプログラミングのスキルを手に入れて､代わりにそれ以外のものを捨てたとか言ったけれど､"それ以外"の部分に手を出す時が来たと感じる｡  
+技術者としての能力は相対的に人並みかそれ以上にはできると思うし実際､関係する講座等で講師を頼まれたりするので少しは自信ある｡  
+プログラミングスキルを相対的に人並み以上にできるようになるためには相応の時間や労力を使った｡  
+その結果､一部では認めてもらえたり認めてもらえなかったりする｡  
+僕のやりたいことを達成するためには､僕が認めて欲しいと思っている人や組織にスキルを買われることが必要だ｡  
+だから次に僕が､すでに手に入れたスキルを磨くこと以外の全部を捨てて手に入れるスキルは､  
+"人や組織に僕のことを良いなと思ってもらえる"スキル
+と決めた｡  
+たったひとつだけのスキルで生きている人間はきっと､僕の知らない社会に生きているか､死んでいくんだと思う｡  
+僕は僕の生きたい社会で生きる｡  
+頑張ろう｡  
