床で寝てた回

--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -373,6 +373,12 @@ Wikipediaで言うとDeep learning-based Synthesisの分類にあたる技術っ
 共感してほしいケースがあった場合は対象の相手にあった伝達方法を工夫することで､ただ"共感したレベル"を上げることはできると思う｡  
 前提として共感してほしいと思う内容が事実かどうかはここでは考えない｡  
 
+## 5日間くらい机や床で寝ていたら体調が悪くなった
+
+28時間くらいが今の活動時間限界っぽい｡  
+作業してても眠すぎてとにかく寝たい気持ちになる｡  
+よく寝落ちと言うといつの間にか寝てる感じだと思うのだけれど､僕は眠くなったらちゃんと?寝る体勢を整えてから落ちてる気がする｡  
+
 ## といったことを考えていると､共感という概念は受け入れられるけれど､言葉は疑いの目で見てしまう
 
 映画などの物語の中で登場人物のおかれた状況や感情を想像する(見せたり聞かせたりして伝達される)と自然と感情が湧き上がってくる感覚｡  
