調理中に考えたことを忘れる回

--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -422,3 +422,4 @@ Wikipediaで言うとDeep learning-based Synthesisの分類にあたる技術っ
 だから､いつでも良いから､何歳になっても良いから､考える量を増やしておくれ｡  
 という心の中の想い｡  
 
+## 料理中になにかを考えたときは食べ始めるころには忘れてるのでここに残せない
