--- a/tweet/2020-02.md
+++ b/tweet/2020-02.md
@@ -423,3 +423,5 @@ Wikipediaで言うとDeep learning-based Synthesisの分類にあたる技術っ
 という心の中の想い｡  
 
 ## 料理中になにかを考えたときは食べ始めるころには忘れてるのでここに残せない
+
+## Guiano 『愛されたいだけだ』が僕の中でヒットしてる
