生きたプロダクトのことを考えることについて考えた回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -18,3 +18,10 @@
 ## 料理中になにかを考えたときは食べ始めるころには忘れてるのでここに残せない
 
 ## Guiano 『愛されたいだけだ』が僕の中でヒットしてる
+
+## 生きたプロダクトのことを考えながら寝ることの幸福さ
+
+今日はこれだけプロダクトにコミットした｡  
+明日はあれがやりたい｡  
+いつかこんなことができるようになりたい｡  
+そんなことを考えなかった日が続いて､より一層そう感じる｡  
