反骨精神が十分に機能すると思った回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -25,3 +25,10 @@
 明日はあれがやりたい｡  
 いつかこんなことができるようになりたい｡  
 そんなことを考えなかった日が続いて､より一層そう感じる｡  
+
+## 僕にとって反骨精神は十分な原動力になるらしい
+
+やってやるからな?(キレ気味)  
+みたいな気分になる｡  
+手は動かないし､頭も回らないのに､そういうとこだけは一丁前にマッチョ｡  
+すべてを忘れてから始めよう｡  
