消費について考えた回
サバイバルにたどり着いたの面白い

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -32,3 +32,46 @@
 みたいな気分になる｡  
 手は動かないし､頭も回らないのに､そういうとこだけは一丁前にマッチョ｡  
 すべてを忘れてから始めよう｡  
+
+## 消費について考える
+
+https://ja.wikipedia.org/wiki/%E6%B6%88%E8%B2%BB  
+欲求を満たすために財/サービス(商品)を消耗すること  
+資源を使用すること  
+生産の反対語  
+
+消費財を使用することで用益を得ること(消費)  
+貨幣を支出することで消費財を購入すること(消費支出)  
+
+消費財や貨幣だけではなく時間や労力､精神等も消費すると言うよね  
+資源と考えられるものは消費可能なのか  
+時間も労力も精神も資源と見ることもできる｡なるほど  
+
+時間の消費について調べた  
+https://studywalker.jp/skillup/article/175207/  
+この記事に書いてあることは僕の感性に合わない  
+消費と浪費に悪い印象のバイアスがあるように感じられる  
+浪費について記述されたWikipediaがないことを発見した  
+消費感覚の問題だと思う｡対象の消費が無駄だと思えばそれは浪費だし､未来に対して有益だと思えばそれは投資だし  
+そう考えると､僕の消費感覚はすべての消費は投資だな  
+たとえ浪費だと感じても浪費にはしない｡なにかを学ぶ  
+でも､少なくとも消費したと考えらられる時間をすべて足しても年齢分の時間にならないので､残った部分の時間はどう捉えるのがよいのだろうか  
+今この考え事している時間は消費かそれとも消費以外の時間か  
+生産でもない気がする  
+
+関係性を考慮せずに､対象単体で見るとすべての行動は生産と消費に分類できそう  
+関係性を考慮すると､単体にとっての消費や生産は交換/変換になる場合がある  
+
+## 消費について考えていたときにたまたま見つけた資料
+
+https://www.meti.go.jp/statistics/toppage/report/bunseki/pdf/h18/h4a0609j3.pdf  
+
+## 会社は話しかけてこねーよ
+
+## 分業を最も効率的に行おうとして作られたのが貨幣(概念)
+
+## 貨幣
+
+https://ja.wikipedia.org/wiki/%E8%B2%A8%E5%B9%A3  
+
+## サバイバル --> 文明社会
