ルールについて考えた回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -75,3 +75,37 @@ https://www.meti.go.jp/statistics/toppage/report/bunseki/pdf/h18/h4a0609j3.pdf
 https://ja.wikipedia.org/wiki/%E8%B2%A8%E5%B9%A3  
 
 ## サバイバル --> 文明社会
+
+## ルール
+
+ルールとは規則､規制､寒冷､しきたりなどを意味する  
+
+ルールは守らなければならないし､ルールは時代とともにアップデートされるべきだと思う｡  
+ルールを決めないことで､硬直化を一定程度抑制できるのか｡  
+
+集団に属する個人ひとり当たりの生産を､集団に属さない場合よりも上げたい  
+他人の学びを享受する必要があるし､自分の学びを共有する必要がある  
+が､それでも個人という限られたリソースを100%稼働させたところで個人が吸収できる単位時間あたりの学びの総量には限界がある  
+だから､学んだ内容は人間以外の場所でその効果を発揮するのが良いと考える  
+そのひとつがルールだと思う  
+アーキテクチャ/ルール/システムといったものは個人の学びを反映して､それを集団内で共有可能な状態にしてくれる  
+個人が学びを吸収して成長し､生産性を上昇させるのと平行して､  
+アーキテクチャが個人から学びを吸収して､個人の生産性の情報を後押ししたり､アセット自体が価値を生み出したりする  
+
+ルールはブースターのような位置づけなのかもしれない  
+ブースターの作成には一定の量力がかかるし､完成後の性能は､作成者の能力に左右される  
+ブースターの稼働後は一定の期間が経過すると､その能力に変化が現れる｡環境によって性能が上がったり､逆に効果範囲の生産性を低下させたりする  
+ブースターが悪い効果を発揮しないようにする対策として､定期的なメンテナンスや使用停止等の対処が必要不可欠となる  
+
+つまり､ルールを作成するかどうかは先にその有効期限と､有効期限内で発揮できる能力と作成からメンテナンスを含めた全体の労力を秤にかけた上で決定されるべき  
+作成した場合はそのルールが十分な性能を発揮できているかどうかを検査し､状況によってルールを処理するメンテナンスを定期的に行う必要がある  
+もちろんメンテナンスが可能な人材を確保しておくことも重要である  
+
+結論｡ルールは集団の生産性の上限突破に必要である｡が､ルールの作成と運用には一定の労力と人材が必要である｡さもなくば､上限突破はおろか悪影響を及ぼす場合がある  
+
+僕はどうするか｡  
+集団に属していないので､個人が他人の学びを拾ってきて､それを自分自身またはルールで吸収するのが良さそう｡  
+ルールのメンテナーは僕だけしかいないので､僕自身は積極的にルールの効果を測るものさしを他人へ検証を依頼すると､精度の歪みを抑制できそう  
+ルールの作成とメンテナンスには労力がかかるが､その労力を外部リソースに投げられないので､ある程度の諦めは覚悟しなければならない  
+ルールを作らないという選択肢を常に持つ｡学びを得たからと言っても､ルールに落とし込まないほうが､全体の生産性は上がるかもしれない  
+とは言いつつも､ルールは学びを個人の外部に保存する良い手段のうちのひとつなので､学んだことをルールに落とし込めないかどうかを考えること自体に意義はあるはず  
