生活について考えた回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -109,3 +109,44 @@ https://ja.wikipedia.org/wiki/%E8%B2%A8%E5%B9%A3
 ルールの作成とメンテナンスには労力がかかるが､その労力を外部リソースに投げられないので､ある程度の諦めは覚悟しなければならない  
 ルールを作らないという選択肢を常に持つ｡学びを得たからと言っても､ルールに落とし込まないほうが､全体の生産性は上がるかもしれない  
 とは言いつつも､ルールは学びを個人の外部に保存する良い手段のうちのひとつなので､学んだことをルールに落とし込めないかどうかを考えること自体に意義はあるはず  
+
+## 学びはナレッジって言ったほうがそれっぽくなることを知った
+
+## 生活リズム調整作戦
+
+なんか良いね｡作戦  
+
+#### 食事編
+メインの食事は一日三食で､毎日同じ時刻に摂る  
+お腹すいたら少量の間食と摂る｡フルーツとかナッツとか  
+
+#### 睡眠編
+寝る時間帯は2100-0730の間に頑張って収めようと努力する  
+眠い時しか寝ない｡寝る時間に眠くなかったら起きててok  
+ただし､毎日同じ時刻に起床する  
+- 寝る時間に眠くないときにやると良いこと
+  - 寝ようとしない
+  - とりあえずいつでも寝られる環境を整えよう
+  - 好きなことをして眠くなるのを待とう
+  - 横になっても10分眠れなかったら起きよう
+- 寝る時間以外に眠いときにやると良いこと
+  - 頑張って目を覚まそう
+  - 運動しよう
+  - 適量のカフェインを摂取しよう
+  - 集中できることをしよう
+  - 熱めのシャワーを浴びよう
+  - 声を出そう
+  - とにかく寝ないようにあらゆる努力をしよう
+  - 太陽等の強い光を眼球で吸収しよう(網膜が焼かれないように直視はしちゃだめ)
+
+眠いかどうか判断する方法
+- 体温の上昇を感じたら横になろう
+- あくびは関係ないよ
+
+#### 運動編
+身体と相談しつつ毎日運動しよう  
+運動した後にプロテインを摂取しよう  
+筋トレは身体を温めてから  
+筋肉を使った後はストレッチで緊張をほぐそう  
+今日消費された筋肉は次の日の食事で修復されるので､次の日も気を抜かず十分な栄養を補給しよう  
+筋肉痛など痛む箇所がある場合はその日のトレーニングはストレッチだけにしておこう  
