シャワー浴びながらやりたいことについて考えた回
今回は忘れなかった!

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -150,3 +150,33 @@ https://ja.wikipedia.org/wiki/%E8%B2%A8%E5%B9%A3
 筋肉を使った後はストレッチで緊張をほぐそう  
 今日消費された筋肉は次の日の食事で修復されるので､次の日も気を抜かず十分な栄養を補給しよう  
 筋肉痛など痛む箇所がある場合はその日のトレーニングはストレッチだけにしておこう  
+
+## ｢やりたいこと｣はジャンルじゃないよねって話
+
+やりたいことがないってよく聞くけれども､そのたびに｢やりたいこと｣というジャンルの中から､その人が熱狂できそうなものを探してるイメージが思い浮かぶ  
+やりたいことジャンルには､アートとかテクノロジーとかビジネスとか､比較的映えるものが多いイメージ  
+人間はよく知らないものに自分が熱狂できるかどうかなんて分からないのだと思う  
+やりたいことがないのはやりたいことジャンルのなかに自分が熱狂できるものがないという意味でそれは､
+やりたいことジャンルの中に自分が精通している事柄がないだけでもあるし､
+やりたいことジャンルの外側に手をのばせば自分の好きなものがあるのかもしれない  
+まずは､やりたいことジャンルという枠は存在しなくても良いと理解すること  
+そして､たまたま目についてしまった石を拾ってよく観察してみること  
+よく見たら好きでも嫌いでもなくとくに感情が動かない石だったらその辺に捨てれば良い  
+だけどその石が少しでも光って見えたのなら､興味のあるリストに入れよう  
+ひとつでも見つかれば､やりたいことはなにかを聞かれたら｢xxxに興味があります｣と答えられる  
+答えながら､xxxがどんなふうに自分の感情を動かしたのかを考えるともっと良いかも  
+それを磨くのいつだって良いと思う  
+僕の手は2本しかないから､同時にたくさんのことはできない  
+どうしようもなくやりたければ今やっていることの手を止めて､それをやると良いと思う  
+
+## いつの間にか学校サボってたときの記憶ななくなってきた
+
+今の生活に慣れすぎている  
+学んだこととその経緯/文脈を少なくともいつでも思い出せるようにしておかないと､目に見える範囲内が理解の限界になってしまう  
+過去の経験や思考が自分を作っているというのならば､
+それを自己肯定の道具にするだけではなく､その経験をしていない他人より深くまで理解をすべきである  
+
+## あらゆる制限から開放されたとき､自分が作られるのか､それとも自分が見つかるのか
+
+｢自分探し｣も好きだし､｢自分づくり｣も好き  
+だけど､自分をつくっていると思っていたら､見つけただけだったといのが一番しっくりくる  
