いろいろな方のポートフォリオサイトを見ていて､職務経歴の欄に自宅警備保障株式会社の記述があってググってたら釘宮病の記述があってググってたら釘宮さんの出演劇場アニメ作品にたまごっちがあって､懐かしくて開いたら好きだった曲を久しぶりに聞けて､なぜか泣きそうになった回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -180,3 +180,11 @@ https://ja.wikipedia.org/wiki/%E8%B2%A8%E5%B9%A3
 
 ｢自分探し｣も好きだし､｢自分づくり｣も好き  
 だけど､自分をつくっていると思っていたら､見つけただけだったといのが一番しっくりくる  
+
+## 『グリーンラッシュ伝説』を聴いたら泣きそうになるので､コンテキストに支配されてる感ある
+
+http://tamaeiga.com/news/news05.html  
+アニオタになってからたまごっちを見ると､釘宮さん...良い...というお気持ちになるのでだめです  
+
+たまごっち良いんだよなぁ  
+https://open.spotify.com/album/3xpWlHMfjbyHqMBsrKN3rq  
