理解とはなにかというテーマはとても重い内容だと気がついた回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -188,3 +188,38 @@ http://tamaeiga.com/news/news05.html
 
 たまごっち良いんだよなぁ  
 https://open.spotify.com/album/3xpWlHMfjbyHqMBsrKN3rq  
+
+## 愛とは
+
+## 自分が持っている意見と他人が持っている意見が違うことがありえることは理解できるか
+
+#### 理解とは
+
+https://ja.wikipedia.org/wiki/%E7%90%86%E8%A7%A3
+珍しくなかなかしっくりこないWikipediaの記述  
+
+理解とはなにかを考えるときに｢文脈｣がキーポイントになると思っている  
+
+どうしてそんなことを思ったのか  
+
+理解の僕の感覚的な理解は､(おもしろポイント)  
+`1+1=2である`ということを理解していると言えると思う｡それが厳密な証明を知らないとしてもだ  
+どうしてそうなったのかと思い出せば､
+`1+1=2`という概念を使ってものを考えるとそれっぽくなる経験をたくさんしたからだと考察する  
+
+## コードを書き続けないと生きていけないと思っていた
+
+が､コードを書かなくても/プロダクトを作らなくても生きていけることが分かった  
+僕は開発の奴隷ではなく､好きだからやっていたことを再認識した  
+制作が好きだから､僕はコードを書くしデザインする  
+
+## HTMLもCSSもやっぱり楽しいな
+
+なんのエンジニアなの?って聞かれると毎回Webアプリエンジニアって言っているのは､
+HTMLコーダーが(この思想を自分で軽蔑しつつも､)差別的に嫌がっていたから  
+僕はサーバーやサーバサイドロジック作ったり､データベースいじったり､Linux環境整えたりするのが好きだったから  
+よく思い出せば､ロジック書くのが楽しいと気がつく前はHTMLもCSSもたくさん書いていたし､
+もちろんそれが楽しかった  
+どちらが上も下もないはずなのにね  
+リスペクトを忘れないように生きよう  
+それでも､僕はHTMLコーダーに負けないくらい別ドメインで頑張るけどね｡リスペクトも追加して  
