運良くコミットできた回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -289,3 +289,19 @@ https://ja.wikipedia.org/wiki/%E9%AB%98%E3%83%BB%E4%BD%8E%E6%96%87%E8%84%88%E6%9
 `相手に理解される(理解したと思われる)`これ大好き  
 
 このWikipedia書いた方と話してみたい  
+
+## 人生､すべて運だと思って生きるのってどうなのだろうか
+
+呼吸しようと思って運良く筋肉が動いてくれて気管が異物がなくて運良く呼吸できた的な｡過剰な例だけど  
+でも運悪くできない場合がないとは言えないからね  
+
+そう思っても良い気がしてきた  
+今日も頑張って生きようではなく､今日も頑張って生きようとしてみようのほうが良い気がした  
+頑張って生きようとしたけれど､運悪く死ぬこともあるからね  
+だからといって死ぬことを許容するのは頑張って生きようとしているとは言えない  
+死ぬことに対して全力で抵抗しながら､僕の意思が僕の身体を動かすことができている運の良さに感謝しつつ､
+せっかく動いたので新たな価値を生産しながら､もっと生産性を上げるにはどうすればよいのかを考える｡  
+たまにはコスパのこと全部忘れて僕の世界で繋がっている思考をアートにする｡  
+そうやって様々な一仕事を積み重ねていくうちに運悪く死んだら､運良かったなって思って消える｡  
+
+ポイントは運悪かったと気がつくのは死んだ後だというところなんだけど､なんでこんなこと考えたのか忘れた  
