国民の権利を放棄する方法を考えようとした回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -305,3 +305,15 @@ https://ja.wikipedia.org/wiki/%E9%AB%98%E3%83%BB%E4%BD%8E%E6%96%87%E8%84%88%E6%9
 そうやって様々な一仕事を積み重ねていくうちに運悪く死んだら､運良かったなって思って消える｡  
 
 ポイントは運悪かったと気がつくのは死んだ後だというところなんだけど､なんでこんなこと考えたのか忘れた  
+
+## 国民の権利を捨てるのって可能なのかな｡って発想はしないのかな
+
+![国民の権利を放棄する](https://github.com/anoriqq/anoriqq/blob/d21f0cffee350575e46fcde2a606de2693ed7144/2020-03-11T22-30-37_IXyaXug3JY2FqxxiojO3n5tG.jpg?raw=true)
+
+安宅和人さんの『シン･ニホン』に関連する話を聞いていて､僕がただ生きるだけの老人になったら､
+その権利を放棄して､若い人が生きたほうが良いよ｡  
+
+## 人が人の価値を信じていくらお金を出せるか
+
+結果的にそれは経済成長に戻ってくる  
+これは聞いただけだからあんま考えてない｡ただのメモ  
