妄想しカタチにしようと決意した回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -317,3 +317,13 @@ https://ja.wikipedia.org/wiki/%E9%AB%98%E3%83%BB%E4%BD%8E%E6%96%87%E8%84%88%E6%9
 
 結果的にそれは経済成長に戻ってくる  
 これは聞いただけだからあんま考えてない｡ただのメモ  
+
+## 妄想しカタチにする力
+
+素晴らしい資料
+
+https://www.mof.go.jp/pri/research/conference/fy2017/inv2017_04_02.pdf
+
+https://www.meti.go.jp/shingikai/sankoshin/shinsangyo_kozo/pdf/013_06_00.pdf
+
+この力は僕の説明する力と同じくらいに意識して鍛えると決めた｡  
