論文書くと決意した回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -327,3 +327,8 @@ https://www.mof.go.jp/pri/research/conference/fy2017/inv2017_04_02.pdf
 https://www.meti.go.jp/shingikai/sankoshin/shinsangyo_kozo/pdf/013_06_00.pdf
 
 この力は僕の説明する力と同じくらいに意識して鍛えると決めた｡  
+
+## 勝手に22歳くらいの気分でいたけど､大学生ならまだ1年生じゃん
+
+今論文かくのありよりのあり｡  
+一度は妄想したので､カタチにしよう｡  
