成長という言葉について考えた回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -334,3 +334,14 @@ https://www.meti.go.jp/shingikai/sankoshin/shinsangyo_kozo/pdf/013_06_00.pdf
 一度は妄想したので､カタチにしよう｡  
 
 ## 13秒ですべて理解して
+
+## ｢成長｣という言葉を使わないようにしてみる実験
+
+成長ってある瞬間から次のある瞬間までになにかの軸で伸びがあったことを客観的に表現した言葉(だよね)  
+そのある軸が何なのかとか､どれくらい伸びたのかあるいは低下したのかを明確にしてみるのも良いのではないかと  
+
+## 僕はもう一度(精神的に)死んだほうが良いよ
+
+もう暇な時間を暇であることを有効に使ってたくさん考え事できた  
+今死ぬので､生き返ったら死ぬほど働いてくださいね  
+さよなら  
