--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -345,3 +345,8 @@ https://www.meti.go.jp/shingikai/sankoshin/shinsangyo_kozo/pdf/013_06_00.pdf
 もう暇な時間を暇であることを有効に使ってたくさん考え事できた  
 今死ぬので､生き返ったら死ぬほど働いてくださいね  
 さよなら  
+
+## ソフトウェアコードでなくても､コミット的な概念があるとモチベになる
+
+もちろん現実せかいを過去の状態に戻すことは(おそらく)不可能なので､
+ライフログ的なものをgitのコミットと近い感覚で実現できるようになると良い気がした
