筋肉痛が治らない回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -350,3 +350,8 @@ https://www.meti.go.jp/shingikai/sankoshin/shinsangyo_kozo/pdf/013_06_00.pdf
 
 もちろん現実せかいを過去の状態に戻すことは(おそらく)不可能なので､
 ライフログ的なものをgitのコミットと近い感覚で実現できるようになると良い気がした
+
+## 胸が痛い
+
+気持ちとかじゃなくて物理的に痛い  
+一週間くらい筋肉痛が続くのって生命としてとても弱いなって思った  
