少なくとも僕という人間は環境の奴隷だなって気づいた回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -355,3 +355,15 @@ https://www.meti.go.jp/shingikai/sankoshin/shinsangyo_kozo/pdf/013_06_00.pdf
 
 気持ちとかじゃなくて物理的に痛い  
 一週間くらい筋肉痛が続くのって生命としてとても弱いなって思った  
+
+## この前亡くなった僕くんの死因は自己の意識で手は動かないということに気づかなかったこと
+
+どんなに意思が強くても､朝は起きられないこともあったし､
+どんなに意思が強くても､コミットできない日もあったし､
+どんなに意思が強くても､ご飯を作れないときもあった｡  
+すべてはその瞬間の状況が現実の行動を(変化しないという変化も含めて)変化させる  
+だから僕の意思を使って本当に注力すべきなのは環境をつくることである  
+その瞬間が来たときに､できるだけ自分の意思に沿うような行動をするような状況を作り出す  
+以前､人に動けるようになるにはどうすれば良いか的な質問をされたときに､
+その場で考えて､体調を良くしておくと僕くんが答えていたのを思い出して､
+なるほど｡健康状態を良好に保つことはその瞬間が来たときに動ける状態をつくることだなって思った｡  
