理解についての具体事例を思い出した回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -367,3 +367,10 @@ https://www.meti.go.jp/shingikai/sankoshin/shinsangyo_kozo/pdf/013_06_00.pdf
 以前､人に動けるようになるにはどうすれば良いか的な質問をされたときに､
 その場で考えて､体調を良くしておくと僕くんが答えていたのを思い出して､
 なるほど｡健康状態を良好に保つことはその瞬間が来たときに動ける状態をつくることだなって思った｡  
+
+## サルでも分かるGitはサルなら分かるでもある
+
+ディスリスペクトではないです　　
+ただ、ブラックボックスを飲み込めって言われているような感覚を受けた　　
+使い方に困るたびに読み返していたけれど、本当に分かったと言えるようになったのは、
+Gitを使い始めて1年くらい経ったときに、人に教える目的で本気で調べ尽くしたとき
