愛とは価値観の論理が崩壊することだと思った回

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -198,6 +198,13 @@
 
 ## 愛とは
 
+価値観の論理が崩壊することが愛だと思ったんですが,どうですかね.  
+人間は対象(人でもモノでもコトでも自分でもなんでも良い)を普段は一定の価値観に基づいて判断していると思う.  
+そしてその価値観は多くの人間の間で大差はないと感じている.  
+だけど,その対象が愛するものだった場合,価値観は異常値になっていて,比較不可能なものになる.  
+恋人は自分より大切にしたくなってしまうし,お気に入りのキーボードコレクションは毎日磨いてしまうし,大好きな仕事は寝食を忘れて取り組んでしまう.  
+比較対象がなくなってしまうことと,それによって判断した結果の行動のことを｢愛｣と呼ぶのはどうですか?  
+
 ## 自分が持っている意見と他人が持っている意見が違うことがありえることは理解できるか
 
 ## 理解とは
