理解とは説明できるということなのか

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -228,6 +228,9 @@
 僕が理解した内容は他人には共有不可能だし､僕は他人の理解したことを知ることはできない
 (できるとしたらそれは､他人の理解したことを自分が理解したとも言える)
 
+アインシュタインが｢6歳の子供に説明できなければ,理解したとは言えない｣と言っている.  
+なるほど.それはそう.  
+
 ## コードを書き続けないと生きていけないと思っていた
 
 が､コードを書かなくても/プロダクトを作らなくても生きていけることが分かった  
