モヤモヤする気持ちと戯れながら生きていくのも悪くない

--- a/tweet/2020-03.md
+++ b/tweet/2020-03.md
@@ -231,6 +231,16 @@
 アインシュタインが｢6歳の子供に説明できなければ,理解したとは言えない｣と言っている.  
 なるほど.それはそう.  
 
+アインシュタインは｢宇宙についてもっとも理解しがたいことは,それが理解可能だということである｣とも言っている.  
+これはちょっと関係性が薄いかもしれないけれど,宇宙でさえ理解可能だということを,
+宇宙を理解していない人間が,理解しないままでも生きていけるということに感動した.  
+僕はなんでも理解しようとするけれど,よく考えたら人間は自分がどうやって生きているのかを知らなくても生きていける.  
+さらに,たとえ理解したことは現実と違っていても生きていける.  
+それでも,できるだけ正しく理解した人間のほうが,そうでない人間に比べて生存確率が増えるのはそうかもしれない.  
+ただ,なんでも理解したいという僕の欲求には適切な距離感を保つ必要があると思う.  
+理解すれば良いという問題じゃないし,僕は世界のすべてを理解しなくても勝手に生きていく.  
+モヤモヤする気持ち,その感触と戯れるのも良い生き方かもしれない.  
+
 ## コードを書き続けないと生きていけないと思っていた
 
 が､コードを書かなくても/プロダクトを作らなくても生きていけることが分かった  
