演技をマスターすると決めた回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -8,3 +8,33 @@
 僕は久しく自分の世界を破壊せずに育ててきた.  
 そろそろ破壊したくてうずうずしてきた気がする.  
 4月は破壊の月にしよう.
+
+## 僕の世界破壊活動のひとつめは演技をマスターすること
+
+僕は今まで演技が苦手だと思ってきた.  
+自分の本心とは違う行動を意図的にしたくない.そう考えてきたから.  
+最近の僕の考えを振り返ると,エゴは当初思っていたよりもかなり小さいもので,
+物理世界を大きく変えられるほどの影響力は持っていないと結論づけた.  
+むしろエゴは物理世界の影響を大きく受けて簡単に一貫性を保てなくなる.  
+さっきまで死んでも良いと思っていた人が,突然に死ぬよりも苦しい痛みを受け続けたら,死にたいと思ってしまうかもしれない.  
+僕は演技ができる.  
+学校をサボるとき,お腹痛い演技をできたじゃないか.部活をサボるとき,足が痛い演技をできたじゃないか.  
+僕にとって嘘をつくのは心理的ダメージが大きい.  
+
+ちょっとそれるかもしれないけれど,嘘って問に対する答えが決まっている場合にしか存在できないよね.  
+ということは,問と答が人によって相違があるのは当然なので,嘘をついたつもりでも事実を言っただけだったりその逆もあるよね.  
+だから,相手に対して常に正しいであろう答えを表明する努力はするとして,必要以上に悩んだりするのはあまり良くないのかも.  
+分からないものとコミュニケーションをとっている前提を忘れずに.  
+分からないのだから,自分の伝えたい事をできるだけ正しく伝えるツールとしての演技はとても強力だと思う.  
+演技はコミュニケーションツールとして捉えてもおかしくないよね.  
+言葉を発することや,ジェスチャーなどと同じくくりが僕はしっくりくる.  
+
+## 嘘とは
+
+事実に反する事柄の表明.とくに故意に表明されたもの.  
+表現技法としての嘘も存在する.これらを鑑賞するには作品に嘘が含まれていることを論理的に理解し楽しむ姿勢(メディア･リテラシー)が必要.  
+人間意外の動物の擬態も嘘といえる.人間も状況によっては死んだふりとかするよね.  
+嘘も方便というし,同じような意味のことわざは意外とたくさんある.  
+自分が嘘をつくことにダメージを受ける人は昔からそれなりにいたのだろうか.  
+
+<https://ja.wikipedia.org/wiki/%E5%98%98>
