たくさんしゃべるようになった回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -38,3 +38,10 @@
 自分が嘘をつくことにダメージを受ける人は昔からそれなりにいたのだろうか.  
 
 <https://ja.wikipedia.org/wiki/%E5%98%98>
+
+## たくさんしゃべるようになった
+
+破壊活動のひとつ.  
+よく歌うようになった.  
+よく音読するようになった.  
+本心とは違う事柄を体を使って表現するのは意外と楽しいかもしれない.  
