練習について考えていた回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -45,3 +45,40 @@
 よく歌うようになった.  
 よく音読するようになった.  
 本心とは違う事柄を体を使って表現するのは意外と楽しいかもしれない.  
+
+## 最近歌い続けている英語の歌がなかなか上達してきた
+
+人間の物理現象に適応して注意力を振る能力と,人間の物理現象に対する意味づけする能力感じてた.  
+僕らは普段から注意していない音,たとえば未習得の言語などには聞こえていても反応できない.
+なぜならそこに注意力を割いてないからだと思う.
+自分の名前はかすかに聞こえただけでも反応できるのに,話せない言語はよく聞こえる距離でも耳をすり抜ける.  
+さらに,そういった音などの物理現象に意味づけを行うと,記憶に定着するらしい.
+英語の歌詞には初めただのリズムにしか聞こえなかった.良い音だな,みたいな.
+それから歌詞の意味を知って,自分の中でその物語を想像して,意味をつけていく.
+そのうち歌の音は意味を持つようになって,僕の名前と同じように,歌詞がするすると頭に入ってくるようになる.
+今までbgmだった音のようには聞き流せなくなる.はっきりと聞こえてしまうから.  
+
+## 練習
+
+知らない言葉の歌を習得する過程で,僕は練習が得意なのかもしれないということに気がついた.  
+今,自分が持っていない能力を,今自分が持っている能力だけを使って上達させる能力.  
+思い返しても,物理世界の話でかつ上手い下手強い弱いなどが明確で運の作用が低いもの,たとえば  
+うんてい,ブランコ,迷路作成,レゴ,WRO,WoT,スクフェス,Osu!...  
+とかは上手だし強かったと思う.  
+逆にやったけど下手とか弱いものはなんだろう.たとえば  
+サッカー,野球,吹奏楽,楽器,DTM,プログラミング,絵
+
+## 久しぶりに笑った
+
+<https://www.youtube.com/watch?v=f1FKbf2Tz3M>
+｢お前らの想像力はそこの丸が見えないのか?｣
+｢ホロでソーシャルハックできる.リムーブ!リムーブ!リムーブ!｣
+｢まずい店の前にホロうんこを死ぬほど置く｣,｢席にゾンビ置いておく｣
+｢株式会社日本とかつくります?｣
+｢満員電車の中を素敵空間にできる世界でなんで満員電車乗ってるの?それは日本人だからですよ｣｢残念!日本人!｣
+｢VRゴーグルをかぶると凍てつく波動を食らう｣
+｢脳を開け.信じれば視界の中央にうさぎが見えるはずだというイニシエーション｣
+
+## renovate botすごい
+
+package.jsonの依存関係だけだと思っていたのだけれど,docker imageまで更新してくれた.  
