昼間に眠すぎた回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -82,3 +82,9 @@
 ## renovate botすごい
 
 package.jsonの依存関係だけだと思っていたのだけれど,docker imageまで更新してくれた.  
+
+## 昨日の昼寝が長くなってしまった理由は朝昼に麻婆豆腐を食べたから説ある
+
+体温が急激に上昇する食べのを日中に摂取すると眠くなるらしい.  
+汗かくほど辛い麻婆豆腐だった.  
+脂質もたくさん入ってたと思うし.  
