問は前提のことだと気づいた回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -88,3 +88,11 @@ package.jsonの依存関係だけだと思っていたのだけれど,docker ima
 体温が急激に上昇する食べのを日中に摂取すると眠くなるらしい.  
 汗かくほど辛い麻婆豆腐だった.  
 脂質もたくさん入ってたと思うし.  
+
+## 問とは前提だし,答とは理想である
+
+特定の瞬間で切り取った状態すべてに人間によって意味づけされたものが前提.  
+人間の妄想によって生まれた最高の状態が理想.  
+前提の状態を変化させることで理想の状態にすることが,問を解くということ.  
+状態の数だけ問と答があるので,そのすべてが解けるとは限らない.  
+それでも僕はいつか解かれると信じて問や答を設定したいし,問を解いていきたい.  
