僕の生きる意味が他人にある状態を20年間続ける覚悟について考えた回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -96,3 +96,15 @@ package.jsonの依存関係だけだと思っていたのだけれど、docker i
 前提の状態を変化させることで理想の状態にすることが、問を解くということ。  
 状態の数だけ問と答があるので、そのすべてが解けるとは限らない。  
 それでも僕はいつか解かれると信じて問や答を設定したいし、問を解いていきたい。
+
+## 「僕は忘れない」から「20年間続ける」へ
+
+正直、僕の人生約20年間で嫌なことや理想とは違うことはたくさんあった。  
+その大半は家族に関わることだった。  
+だから僕は、「子供の気持ち」や「兄弟の気持ち」を忘れまいと考えていた。  
+もしも、僕が相手の立場になったら、幼い頃の僕はどうしてほしかったのか。  
+だから僕は忘れない。この気持を絶対に。  
+僕は小学校にあがる前の写真をたまたま見ていた。  
+そこに写る僕の周りの人間は、僕の理想ではないのか。  
+人の生きる意味が他人にある状態をどれくらいの期間続けられるのか。  
+僕にはその覚悟があるか。
