世界を変えた感をお手軽に味わう方法を考えてやり始めた回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -108,3 +108,19 @@ package.jsonの依存関係だけだと思っていたのだけれど、docker i
 そこに写る僕の周りの人間は、僕の理想ではないのか。  
 人の生きる意味が他人にある状態をどれくらいの期間続けられるのか。  
 僕にはその覚悟があるか。
+
+## I've changed the world toward my ideal state. を口癖にする
+
+僕の理想の世界はたしかに存在するはずだ。
+だけど、それを実現するために他人の人生を変えてしまうことを恐れている。
+この恐れと戦わず、今あるままの世界で生きるのも悪くないのかもしれない。
+それでも理想を諦めるのは僕には苦しすぎる。
+
+そもそも人間というのは世界に適用しながら生きているはずだ。
+それに、僕は他人を変える力なんてはなから持っていないことに気づけ。
+
+僕が描く理想は世界の理想のはずで、他人の理想ではないはずだ。
+
+恐れることはない。世界を変えるんだ。
+
+（限りなくスコープの狭い話。朝起きたらゴミ捨てたとかは世界を変えたことになる）
