思い知るって重要なポイントだと思った回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -124,3 +124,13 @@ package.jsonの依存関係だけだと思っていたのだけれど、docker i
 恐れることはない。世界を変えるんだ。
 
 （限りなくスコープの狭い話。朝起きたらゴミ捨てたとかは世界を変えたことになる）
+
+## 思い知るって重要だ
+
+ある物事を理解するために、別の物事への理解を犠牲にしなければならないことがある。
+同一の物事に対する理解が人の数以上にあるはずだが、
+少なくとも僕という人間は、今持っている理解を別の理解で書き換えるためには「思い知る」ということが効果的なのだと思う。
+思い知るまでは自分の理解を貫けるととるか、頑固だととるか、頭が悪いのか、世界を知らないのか。
+
+というか、最近は何かを思い知るという体験をしていない気がする。
+最近と言わず、長い間してないな。
