謎と向き合う回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -134,3 +134,11 @@ package.jsonの依存関係だけだと思っていたのだけれど、docker i
 
 というか、最近は何かを思い知るという体験をしていない気がする。
 最近と言わず、長い間してないな。
+
+## それでいいのか。と言われればそれは謎である
+
+一度は自分の価値観を通したものの、それが良いのか悪いのか謎であることはかなり多い。
+助けになれるのは、過去の自分が行った経験に紐づけて、動かないという選択も含め決断し動くことだ。
+謎なことはありふれている。なぜなら、謎を感じることなく人間が動けるのは、ある人間にとって筋が通っているからだ。
+人間が存在しなければ筋や意味は存在しないから、謎ももちろん生まれない。
+動いた結果、後の自分や周りの人間に「意味」が残せるように、今日も動くのだ。
