僕のステートメントはなにかを考えてよく分からなかった回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -142,3 +142,12 @@ package.jsonの依存関係だけだと思っていたのだけれど、docker i
 謎なことはありふれている。なぜなら、謎を感じることなく人間が動けるのは、ある人間にとって筋が通っているからだ。
 人間が存在しなければ筋や意味は存在しないから、謎ももちろん生まれない。
 動いた結果、後の自分や周りの人間に「意味」が残せるように、今日も動くのだ。
+
+## 目標とは結果である
+
+## 会社は外側からは見えない
+
+会社に所属していたときには会社のことが見えていた気がするけれど、
+辞めてからはほとんど何も見えなくなった。
+だから僕は、会社の中で見えるものを大切にしたい。
+当たり前のことではないから。
