無気力期が来たのでどれくらいの周期なのか気になった回

--- a/tweet/2020/04.md
+++ b/tweet/2020/04.md
@@ -151,3 +151,8 @@ package.jsonの依存関係だけだと思っていたのだけれど、docker i
 辞めてからはほとんど何も見えなくなった。
 だから僕は、会社の中で見えるものを大切にしたい。
 当たり前のことではないから。
+
+## 無気力期来た
+
+2020/04/25から
+定期的にくるけど、どのくらいの周期なんだろうか。
