ラノベを読み始めた回

--- a/tweet/2020/05.md
+++ b/tweet/2020/05.md
@@ -5,3 +5,12 @@
 結構ショック。
 2週間くらい7時に起きてオートパイロットみたいな感じだったのに。
 就寝時刻前もオートパイロットにしてみよう。
+
+## 1億年と2千年ぶりにライトノベルを読み始めた
+
+本当はコミカライズ版をポチったつもりだったんだけど、原作のラノベの方を買っていた。
+いつもならキャンセルしているが、今回は読んでみようという気持ちになった。
+内容に惹かれたのでコミカライズ版より物語が進んでいる原作のほうが良かったというのももちろんある。
+し、空想を文字で表現したものに長いこと触れてこなかったので、想像力を鍛えたくなったのも大きい。
+まだ最初の数ページしか読んでいないけれど、久しぶりにワクワクすることが増えたので、ゆっくり読んでいく。
+あわよくば、読書も習慣化していきたい。
