君は何にとっての何かという問

--- a/tweet/2020/05.md
+++ b/tweet/2020/05.md
@@ -14,3 +14,8 @@
 し、空想を文字で表現したものに長いこと触れてこなかったので、想像力を鍛えたくなったのも大きい。
 まだ最初の数ページしか読んでいないけれど、久しぶりにワクワクすることが増えたので、ゆっくり読んでいく。
 あわよくば、読書も習慣化していきたい。
+
+## ｢君は何にとっての何か｣という問が良い
+
+ふと思いついた問。
+この答えで色々なことが分かったり分からなかったりしそう。
