夜ふかしにけりをつけた

--- a/tweet/2020/05.md
+++ b/tweet/2020/05.md
@@ -19,3 +19,42 @@
 
 ふと思いついた問。
 この答えで色々なことが分かったり分からなかったりしそう。
+
+## 前回の2度寝から11日、またやらかしてショック
+
+2300くらいだろうと思いこんで作業していたら、2500を回っていた。  
+前回と違うのは0700に目が冷めてから2度寝したんじゃなくて、
+目が冷めたら0900過ぎだった。  
+開発楽しいけど、こういう事があるから、なんとかしなければと思う。
+
+夜作業中に作業を続けるか、中断して就寝するかの選択は今決めておく。
+
+基本的に僕の睡眠は浅いので、時間を確保しないと7.5h以上眠れない。  
+だから、0700に起きる場合、2330に寝るのではだめで、2200には寝ないといけない。  
+作業の質の観点だと、夜作業は視力が低下していることが多く、余計にストレスがかかる。  
+さらに、期待する時刻に起きられなかったときのストレスも大きいので、作業に支障をきたすリスクがある。  
+夜に予定の2000-2100の1hを超えて2500までの5h作業を追加で行ったとして、翌日の起床時刻が2h遅れた場合、
+午前の作業時間は2h減る。つまり、予定より作業時間を3h多く確保可能である。  
+良い気がしてきた。
+
+こう考えよう。  
+効率が良い作業は時間をとらない。  
+僕の作業における五七五を設定しよう。  
+僕の1日に与えられた作業時間は午前3.5h午後3h夜1.5hの合計8hだ。  
+この制限された時間の中で、最も自分にとっての価値が生み出せることをすることを目指そう。  
+一区切りの作業で、僕が行った作業は時間に見合う以上の価値を出せていたか。  
+もっと効率を上げることはできるか、どうすればできるのか。  
+反省することを習慣化しよう。
+
+結論。  
+夜ふかしは作業時間を確保できるが、身体に悪影響を及ぼす。  
+そこで、作業時間あたり生産した価値を最大限にすることを目標に置き換える。
+
+今までは作業した分だけ価値を生産できるために作業を続けてしまっていたが、  
+これからは単位時間あたりに生産する価値を上げることが目標なので
+作業時間を確保することよりもできることが増える。
+
+## 作業とは
+
+> 作業 (さぎょう、英語: occupation) とは、日々の生活で行われ、名付けられている一群の活動と課題であり、個人と文化によって価値と意味があたえられたものである。
+>> [Wikipedia](https://www.wikiwand.com/ja/%E4%BD%9C%E6%A5%AD)
