コミュ力大量消費した回

--- a/tweet/2020/05.md
+++ b/tweet/2020/05.md
@@ -58,3 +58,9 @@
 
 > 作業 (さぎょう、英語: occupation) とは、日々の生活で行われ、名付けられている一群の活動と課題であり、個人と文化によって価値と意味があたえられたものである。
 >> [Wikipedia](https://www.wikiwand.com/ja/%E4%BD%9C%E6%A5%AD)
+
+## コミュ力大量消費した
+
+いろんな文脈はすっ飛ばして書くけど、お話してみたいなって思ってた方にビデオチャットのアポをとった。  
+良い人そうで本当に良かった。  
+お聞きしたいことはいろいろあるけれど、裏目標は仲良くなることなので、達成できるように頑張る。
