--- a/tweet/2020/05.md
+++ b/tweet/2020/05.md
@@ -64,3 +64,44 @@
 いろんな文脈はすっ飛ばして書くけど、お話してみたいなって思ってた方にビデオチャットのアポをとった。  
 良い人そうで本当に良かった。  
 お聞きしたいことはいろいろあるけれど、裏目標は仲良くなることなので、達成できるように頑張る。
+
+## コミュ力大量消費のかいあって過去最高に良い時間を過ごすことができた
+
+19:00-20:00の1時間の予定だったけれど、23:00まで話し込んでしまった。  
+お互いのエンジニア的なことから個人的な趣味までいろいろな話ができた。  
+更には技術キャッチアップのソースややり方を教えていただいたり、ネイティブの始め方を考えていただいたり、
+弊自宅のネットワーク環境のデバッグをしていただいたり、
+情報理論の勉強を勧めていただいたり<https://www.wikiwand.com/ja/%E6%83%85%E5%A0%B1%E7%90%86%E8%AB%96><https://logics-of-blue.com/information-theory-basic/><https://www.komazawa-u.ac.jp/~kazov/Nis/lecture/infotheory/>、
+ネットワークの勉強方法を教えていただいたり、
+知らなかった音楽家の方を教えていただいたり<https://www.wikiwand.com/ja/ZANIO>、
+ネットワークの勉強方法を教えていただいたり、<https://www.wikiwand.com/en/Packet_Tracer><https://www.gns3.com/><https://www.vyos.io/><https://toranoana-lab.hatenablog.com/entry/2018/11/29/19584>1、
+http/3の情報を共有していただいたり<https://http3-explained.haxx.se/ja/why-quic/why-tcphol>、
+安いルーター紹介していただいたり<https://www.amazon.co.jp/dp/B010MZFH5A/ref=cm_sw_em_r_mt_dp_U_6JsWEbNFNNWNG>、
+パケットキャプチャの方法を教えていただいたり<https://www.wireshark.org/>、
+Computer Scienceの世界へ招待いただいたり<https://www.wikiwand.com/ja/%E8%A8%88%E7%AE%97%E6%A9%9F%E7%A7%91%E5%AD%A6><https://www.jstage.jst.go.jp/browse/ojjams/-char/ja/>、
+オートマトンの勉強を勧めていただいたり<https://www.wikiwand.com/ja/%E3%82%AA%E3%83%BC%E3%83%88%E3%83%9E%E3%83%88%E3%83%B3><https://www.ci.seikei.ac.jp/yamamoto/lecture/automaton/text.pdf>、
+コンピューターアーキテクチャの勉強を勧めていただいたり<https://www.wikiwand.com/ja/%E3%82%B3%E3%83%B3%E3%83%94%E3%83%A5%E3%83%BC%E3%82%BF%E3%83%BB%E3%82%A2%E3%83%BC%E3%82%AD%E3%83%86%E3%82%AF%E3%83%81%E3%83%A3>、
+エントロピーの勉強を勧めていただいたり<https://www.wikiwand.com/ja/%E3%82%A8%E3%83%B3%E3%83%88%E3%83%AD%E3%83%94%E3%83%BC>、
+誤り訂正の勉強を勧めていただいたり<https://www.wikiwand.com/ja/%E8%AA%A4%E3%82%8A%E6%A4%9C%E5%87%BA%E8%A8%82%E6%AD%A3>、
+符号理論の勉強を勧めていただいたり<https://www.wikiwand.com/ja/%E7%AC%A6%E5%8F%B7%E7%90%86%E8%AB%96>、
+文字符号化式の勉強を勧めていただいたり<https://www.wikiwand.com/ja/%E6%96%87%E5%AD%97%E7%AC%A6%E5%8F%B7%E5%8C%96%E6%96%B9%E5%BC%8F>、
+チェックディジットの勉強を勧めていただいたり<https://www.wikiwand.com/ja/%E3%83%81%E3%82%A7%E3%83%83%E3%82%AF%E3%83%87%E3%82%A3%E3%82%B8%E3%83%83%E3%83%88>、
+抽象構文木の勉強を勧めていただいたり<https://www.wikiwand.com/ja/%E6%8A%BD%E8%B1%A1%E6%A7%8B%E6%96%87%E6%9C%A8>、
+DBの正規化の勉強を勧めていただいたり<https://oss-db.jp/dojo/dojo_info_04><https://qiita.com/mochichoco/items/2904384b2856db2bf46c>、
+デザインパターンの勉強を勧めていただいたり<https://www.wikiwand.com/ja/%E3%83%87%E3%82%B6%E3%82%A4%E3%83%B3%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3_(%E3%82%BD%E3%83%95%E3%83%88%E3%82%A6%E3%82%A7%E3%82%A2)>、
+本当に良い時間だった。  
+すごい言葉を選んでいただいた気もするけれど、今の僕にとって持っていることでこれからもっと良い方向に進めるようなアドバイスをたくさんいただいた。  
+ピクシブ社では、｢プロダクトが作れるかどうか｣を重要視しているということはとても良い情報だった。  
+プロダクトを作って、それを誰かのためを考えて改良を加え続ける作業は実務において非常に重要な能力になる。  
+そして、その能力を証明するには、やはり自分のプロダクトを作り、公開し、利用してもらい、改善を加えることが有効。  
+僕にとってそれは少し前に気がついて、実行し始めたことが間違っていないことを肯定していただけたので、自信を持ってプロダクト作りと利用してもらうことができる。  
+あとREADMEはしっかり書こう。  
+本当に本当に良い時間だった。  
+たくさんやりたいことができたので、直近でやることをリストアップする。
+
+1. Disposable appをリリースする
+2. <https://www.komazawa-u.ac.jp/~kazov/Nis/lecture/infotheory>のテキストを一通りこなして、他人が見えるような形でアウトプットする
+
+わくわくがとまらない。  
+きっとテンションが上がっているだけなので、この感覚をこのファイルに残して、僕は冷静になったときに再び思い出し、取り組むべきことを考えて実行する。  
+きっとできる。Good Luck。
