--- a/tweet/2020/05.md
+++ b/tweet/2020/05.md
@@ -105,3 +105,19 @@ DBの正規化の勉強を勧めていただいたり<https://oss-db.jp/dojo/doj
 わくわくがとまらない。  
 きっとテンションが上がっているだけなので、この感覚をこのファイルに残して、僕は冷静になったときに再び思い出し、取り組むべきことを考えて実行する。  
 きっとできる。Good Luck。
+
+## つらい
+
+僕の理想の自分と現実の自分が遠すぎて辛いし、理想だと思っていた自分が至らなかったのも辛い。  
+とっても重い辛さのときって本当に胸が痛くなるのね。  
+泣きたいのに涙が出ない。  
+ひたすら胸が痛い。  
+自分の選択に自信を持てていた自分は今ここへ進むために必要だった自分。  
+その自信を打ち砕いたのが昨日の自分。  
+ズタボロになったエゴを前よりもっと強くて弱くて大きくて小さくて堅くて靭やかで、前よりもずっと信じられるものにするのが今からの自分。
+
+僕は死ぬことができないと知っていてよかった。  
+死ねるか試す手間が省けたよ。
+
+きっとこの辛さはすべての人間が経験したのだろう。  
+今まで甘えていたのだと知ると更に辛くなる。
