スタンディング始めた回

--- a/tweet/2020/06.md
+++ b/tweet/2020/06.md
@@ -3,3 +3,13 @@
 ## 洗濯した布団カバーを取り出したらどうしてか泣きそうになった
 
 どうしちゃったんだよ。
+
+## スタンディング始めた
+
+今使っているPCデスクの足は高さ調節機能があって、いくらか高さを変えることができるんだけど、その限界を突破した101cmで使ってる。  
+本来の最高高さより10cm以上高いので揺れが目立つ。  
+お金が貯まったら本来のスタンディングデスクを買おう。  
+それまで耐えてほしい。
+
+エンボディチェアは一旦、スタメンから外れます。  
+PCとセットではなく、読書とかiPadと一緒に使っていきます。
