週6冊も本を購入した回

--- a/tweet/2020/06.md
+++ b/tweet/2020/06.md
@@ -13,3 +13,8 @@
 
 エンボディチェアは一旦、スタメンから外れます。  
 PCとセットではなく、読書とかiPadと一緒に使っていきます。
+
+## 今週、6冊も本買ってるのすごい
+
+これ自体とても驚くべきことなんだけど、6冊目が辞典なのがもっとすごいと思う。  
+本読むの楽しい。
