これがウォールペーパー

--- a/tweet/2020/06.md
+++ b/tweet/2020/06.md
@@ -54,3 +54,7 @@ gitをgoで書いてみるか、Regexのmatchをgoで書くかする。
 > わり算はどんなときに使いますか?
 
 2人前の料理のレシピを1人前つくるときの調味料の量を計算するとき。
+
+## ホワイトボードも良いけど紙も良いよね
+
+![wall-paper](https://github.com/anoriqq/anoriqq/blob/a0e1ebf5f128c42d8a9dbe5123b50e74152b63bf/2020-06-14T21-13-04_Cjbcw3CU90usRyhVo0vpQySZ.jpg?raw=1)
