--- a/tweet/2020/06.md
+++ b/tweet/2020/06.md
@@ -58,3 +58,10 @@ gitをgoで書いてみるか、Regexのmatchをgoで書くかする。
 ## ホワイトボードも良いけど紙も良いよね
 
 ![wall-paper](https://github.com/anoriqq/anoriqq/blob/a0e1ebf5f128c42d8a9dbe5123b50e74152b63bf/2020-06-14T21-13-04_Cjbcw3CU90usRyhVo0vpQySZ.jpg?raw=1)
+
+## 6時間くらいの作業が吹っ飛んだ
+
+Eagleで回路設計をしてたんだけど、CADでは保存する癖がついてなくて全く保存してなかった結果、
+ソフトが落ちて6時間分くらいの作業が消えた。
+
+泣きたい。
