秋月が定休日だった回

--- a/tweet/2020/06.md
+++ b/tweet/2020/06.md
@@ -65,3 +65,8 @@ Eagleで回路設計をしてたんだけど、CADでは保存する癖がつい
 ソフトが落ちて6時間分くらいの作業が消えた。
 
 泣きたい。
+
+## MOSFETを買いに行ったけど秋月の定休日だった悲しい
+
+50円のFETのために往復400円の交通費がかかった。  
+ちゃんと調べて行こう。
