ソフトウェア活動を取り戻そうの回

--- a/tweet/2020/07.md
+++ b/tweet/2020/07.md
@@ -13,3 +13,10 @@ CPUをつくろうと決心したきっかけ。
 メモリ操作の具合がどうにも分からず、これはメモリをつくって理解したほうが良いなと思ったことである。
 
 これから同じ問題を解くつもりだが、3週間前の自分とどう変わっているのかを実感するのが楽しみである。
+
+## CPUを作っている間に滞ったソフトウェア活動を取り戻す
+
+![github-profile](./assets/github-profile%202020-07-02%20150707.png)
+
+まずは習慣から。  
+ストリークを取り戻そう。
