数ヶ月ぶりに昼寝をした回

--- a/tweet/2020/07.md
+++ b/tweet/2020/07.md
@@ -20,3 +20,12 @@ CPUをつくろうと決心したきっかけ。
 
 まずは習慣から。  
 ストリークを取り戻そう。
+
+## 数ヶ月ぶりに昼寝をした
+
+4時に目が冷めてしまって、昼間に眠くなるだろうなと思っていたが、案の定寝てしまった。  
+感想はあまり気分良くない感じ。
+
+そもそも、自分が実現したいことのために何をすればよいのかを考える日々は、
+なかなか熱狂的な気分にするのが難しいし、目先の今やりたいことに意識がそれてしまう。  
+結果、頭が回らなくて眠くなる傾向がある気がした。
