サーベイしてたら4時過ぎになった回

--- a/tweet/2020/07.md
+++ b/tweet/2020/07.md
@@ -29,3 +29,11 @@ CPUをつくろうと決心したきっかけ。
 そもそも、自分が実現したいことのために何をすればよいのかを考える日々は、
 なかなか熱狂的な気分にするのが難しいし、目先の今やりたいことに意識がそれてしまう。  
 結果、頭が回らなくて眠くなる傾向がある気がした。
+
+## サーベイしてたら4時過ぎてた
+
+久しぶりにACMのカンファレンスの採択論文をサーベイした。  
+実は今まではACMの組織構造やサイトマップを理解せずにサーベイしてたのだけれど、
+今回で完全に理解した。  
+
+ひとりで1 paperを1 slide, 30 secでまとめるのをやる、｢ひとり勉強会｣をそのうち開催したい。  
