数学楽しいと思った回

--- a/tweet/2020/07.md
+++ b/tweet/2020/07.md
@@ -37,3 +37,23 @@ CPUをつくろうと決心したきっかけ。
 今回で完全に理解した。  
 
 ひとりで1 paperを1 slide, 30 secでまとめるのをやる、｢ひとり勉強会｣をそのうち開催したい。  
+
+## 数学楽しい
+
+『数学ガール』という作品を読み始めた。  
+僕は数学が得意ではないので、数字よりも物語をメインに読んでいる。  
+
+これがなかなか楽しい。  
+最近は文字を読むことに抵抗がなくなってきていて、本を読むこと自体が楽しいのだけれど。  
+
+読みながら少し考えた。  
+｢数学は楽しいから、数学をすることで生きていきたい｣。  
+ふとそんなことが頭に浮かんだ。  
+せっかくだから人生のほとんどの時間を数学をして生きている自分を想像してみた。  
+ちょっと違う気がした。  
+
+数学は好きだけれど、数学のことを考えて死にそうになるのは納得できない。  
+きっとこれは想像だけれど、数学に人生を使う人が数多くいるくらいだから、退屈することは無いのだろうけれど。  
+それでも何かが引っかかる。  
+
+もちろん趣味の範疇で思い思いに勉強するのはきっと素敵だけどね。
