人生で初めて1日に1冊の本を読んだ回

--- a/tweet/2020/07.md
+++ b/tweet/2020/07.md
@@ -57,3 +57,26 @@ CPUをつくろうと決心したきっかけ。
 それでも何かが引っかかる。  
 
 もちろん趣味の範疇で思い思いに勉強するのはきっと素敵だけどね。
+
+## 人生で初めて1日で1冊の本を読んだ
+
+僕は読書が苦手だった。  
+本を読むのは好きだけれど、集中力が著しく不足していて、好きの気持ちはそれに勝てない程度だった。  
+
+『アプレンティスシップ・パターン』を読む明確で必ず達成したいという目的ができたとき、
+集中力がないなりに一所懸命に読んだ。  
+時間はそこそこに1週間ほどかかったけれど、本からとっても重要なことを学んだという思いが過去1番強かった。  
+
+それから、僕の中で本を読むことの重要度が非常に高まって、今では毎日本を読んでいる。  
+
+1ヶ月近く毎日本を読んでいると自然と**本を読む能力**がついてくるのか、
+理解の速度や文字を追う速度、1度に集中して読める時間などが向上している気がする。  
+
+今回1日で読みきった本は『数学ガールの秘密ノート 式とグラフ』。  
+『数学ガール』を読んでいて、難しいと思うところがあり、同じ著者の易しい内容の本がこれだったので早速読んだ。  
+
+この年齢にして中学高校の数学の内容をほとんど覚えていないのか、そもそも学んでいないのか。  
+とにかく僕は良く考えながら読み進めるしかなかったが、何より読むのが楽しくて、
+数学がそこそこできた、から全くできなくなったを経て、今では数学が大好きに変わった。  
+
+これからも、読書と数学を学ぶことを続けていきたいと心から思った。
