あらゆるコミュニケーションから価値が生まれる世界について考えた回

--- a/tweet/2020/07.md
+++ b/tweet/2020/07.md
@@ -80,3 +80,43 @@ CPUをつくろうと決心したきっかけ。
 数学がそこそこできた、から全くできなくなったを経て、今では数学が大好きに変わった。  
 
 これからも、読書と数学を学ぶことを続けていきたいと心から思った。
+
+## あらゆるコミュニケーションから価値が生まれる世界
+
+久しぶりにコミュニケーションについて考えていた。  
+
+人間が別の人間の感じていることが分かる気がするのってとても不思議だ。  
+その能力があるおかげで人類は今ここまで生きることができたのだと思う。  
+
+もしも、それぞれの人間が他人の思惑を想像できなかったとしたら、
+世界は今よりもっとつまらなかったと思う。  
+
+たとえば、僕が他人の考えを想像することができなかった場合、僕の頭の中から会話は消える。  
+頭の中には他人がいないのだから、納得できる思う。  
+それじゃあ、頭の中にはなにがあるのだろうか。  
+僕は現象だけが頭の中に入るのだと想像した。  
+コンテクストがコード以上の意味を持たない世界。  
+
+善悪の判断はしないけれど、僕がもしどちらの世界も知っていたならば、
+僕の中に(それがつくりものでも)他人が生きられる世界にいきたいと願うだろう。  
+
+それはきっと、良いことばかりが起こるわけではもちろん無いと思う。  
+自分の中に生きる誰かが、僕の聞きたくないような辛く苦しい言葉を喋って止まらないときもあるかもしれない。  
+それでも僕は、辛いことがあることを受け入れて、自分の知らない世界を語りだす誰かに生きていてほしいと心から思う。  
+
+なにも起きない日常にほんわかしたいし、新たな発見を目一杯喜びたいし、悲しいときに泣きたいし、時には涙をこらえたい。
+頭悪いことをやってはしゃぎたいし、大切なものをかけた真剣な勝負に本気で挑みたい。  
+
+こういうわがままをすべて叶えてくれるかもしれない能力を、人間は持っている。  
+自分の中に他人とともに生きること。僕はこれをコミュニケーションと呼ぶ。  
+
+一緒に生きるのは誰だって良い。  
+親友でも恋人でもアニメの主人公でも小説の主人公の友達でも
+漫画の主人公のライバルでもその作者でも一枚絵の少女でも散歩中に見かけた野良猫でも
+雑貨屋で目があったぬいぐるみでも僕の目と一緒に輝いたLEDを流れる電子でも良い。  
+
+とにかく、自分以外の誰かのことを想像するのだ。  
+そこにはきっと、そうしなければ出会わない感情があるはずだと、僕は信じる。  
+人間の中に生まれた唯一無二のその感情は、たとえそれが痛みを伴うものでも無価値ではないと、僕は信じる。  
+
+だから僕は、「価値が見つかるコミュニケーション」を誰もができる世界をつくりたい。  
