chore: fix typo

--- a/tweet/2020/07.md
+++ b/tweet/2020/07.md
@@ -2,7 +2,7 @@
 
 ## CPUが完成した
 
-3週間くらいかかって、`A9TD4`という型番をつけた4bit RISK CPUを完成させた。  
+3週間くらいかかって、`A9TD4`という型番をつけた4bit RISC CPUを完成させた。  
 長いプロジェクトであった。  
 当初想像していた3～4倍の時間を費やしたが、僕自身の電子工作能力とデジタイル回路の理解度を正確に把握することもできた。  
 CPU本体の原価は覚えてないけど、そこそこ安くできたと思う。  
