できないことができるを理解したかった回

--- a/tweet/2020/07.md
+++ b/tweet/2020/07.md
@@ -120,3 +120,69 @@ CPUをつくろうと決心したきっかけ。
 人間の中に生まれた唯一無二のその感情は、たとえそれが痛みを伴うものでも無価値ではないと、僕は信じる。  
 
 だから僕は、「価値が見つかるコミュニケーション」を誰もができる世界をつくりたい。  
+
+## パンを発酵させる恩恵は過去から受けるのか未来から受けるのか
+
+## いまやることを決める基準
+
+信頼の跳躍 有限な生 意味に満ちた人生をきることができる 絶望と俯瞰から開放される 意味のある人生が遅れる
+
+我々の生は我々自身の意思を反映しているのであり、意思、生には目的がなく、非合理的で、苦痛を伴う運動だ
+
+姿勢主義は、確たる知識/判断の源泉として人間全般に先天的に備わっている機能/能力であると信じる「理性」を拠り所とする態度のこと。
+
+## 人類にはできても僕にはできない
+
+僕単独の
+
+## 自己PR
+
+結論、経験した内容、自分の長所がどのように活きたか、どのような結果が得られたか、その経験を通じて得た特性をどのように就職後活かそうと考えているのか
+[キャッチフレーズ]
+結論
+具体的なエピソード
+経験で得たものをどのように活かせるか
+
+1. 強みの羅列
+
+- 高い集中力
+- 困難を乗り越える力
+- 高度な想像力
+- 高い実践力
+- 実用的な調査能力
+
+## 未知への追憶
+
+シーズンテーマ
+
+17年-の作品を展示
+
+映像と物質/計算機と自然の差を考える
+どういう意味を持っているのか
+
+社会批評性を含むアートより、直接社会を変えるほうが効果がある
+社会的なメッセージを込めない純粋なアートと向き合う
+
+自分が一体どこに向かっているのかを共有したら楽しそう
+
+今までやってこなかった表現技法をつかう
+
+手の技としてアートをつくる
+
+変わり続けることを変えず、つくり続けることをやめない
+行動ステートメント
+
+物化する計算機自然と対峙し、質量と映像の間にある情念や憧憬を反芻する
+アーティストステートメント
+
+自分の持っている自然な性質
+
+込めたことはあえて語ってはいけない
+
+夢中
+民藝的
+
+## 「できないことができる」は理解できない文だな
+
+食べられないことができる（食べれないことができるの意）とか。
+あるものがないは理解できるのに。
