自己PR考えた回

--- a/tweet/2020/07.md
+++ b/tweet/2020/07.md
@@ -151,6 +151,28 @@ CPUをつくろうと決心したきっかけ。
 - 高い実践力
 - 実用的な調査能力
 
+困難を乗り越える能力
+私の経験した最も困難だったことは不登校の経験です。
+
+粘り強く集中する能力
+
+冷静に洞察する能力
+
+大きな挑戦をものにする能力
+転学や長期インターンなどの挑戦をやり遂げ、結果としてエンジニアリングスキルやコミュニケーションスキルを大きく向上させることができました。
+
+自力で学ぶ能力
+学びたいことを見つけ、それを手に入れるために実行力と粘り強さを発揮できます。
+私はプログラミングのスキルやコンピューターの大まかな知識はある程度有していましたが、メモリ操作で躓いたのをきっかけにCPUとメモリを実際に実装することで新たに学びを得ました。
+その際の学び方について、すでに学んだ方へのヒヤリングをさせていただくなどして、自分に合った学び方を調査し選択しました。
+このスキルを活かしチームに合った成長の道筋を提案することやナレッジを有効に活用することで貢献できると考えています。
+
+素直に受け入れ責任を持って判断する能力
+ひとつの価値観に縛られることなく対象を捉え選択したことに責任感とオーナーシップを発揮して行動できます。
+私は学生時代に転学を経験しましたが、その決断するまでに多くの方に意見をいただきました。賛成反対意見だけでなく、私自身の考えを尊重してくださるものや一見すると悪態にも見えるようなものもありました。
+結果的にすべての意見を清濁併せ呑んだ上で、結論を出しエンジニアとして働けると証明して卒業するというステートメントを決めやり遂げました。
+このスキルを活かしどのような状況や環境でも飛躍的に成長する努力を惜しまないつもりです。
+
 ## 未知への追憶
 
 シーズンテーマ
