きっと忘れてはいけないこと

--- a/tweet/2020/08.md
+++ b/tweet/2020/08.md
@@ -6,3 +6,8 @@
 部屋でたくさんジャンプしてた。
 
 やりたいことができる環境に行くには準備も大切だからしっかり対策しよう。
+
+## コミュニケーションに関することなら無限に考え事できる
+
+どうしてこれほど関心が高いのかというのは、
+**説明がつく中で見つけた説明がつかないもの**なんだろう。
