そういえばとピクシブ選考を思い出す回

--- a/tweet/2020/09.md
+++ b/tweet/2020/09.md
@@ -4,3 +4,15 @@
 
 **信じたものだけが世界のすべてである**
 
+## ピクシブの選考、めっっっっっちゃ緊張したよ
+
+https://github.com/anoriqq/anoriqq/blob/6be20ca32e/tweet/2020/02.md#%E6%9C%AC%E7%95%AA%E3%81%A7%E7%B7%8A%E5%BC%B5%E3%81%99%E3%82%8B%E3%81%AE%E3%81%AF%E3%81%9D%E3%82%8C%E3%81%AB%E5%90%91%E3%81%91%E3%81%A6%E6%9C%AC%E6%B0%97%E3%81%A7%E5%8F%96%E3%82%8A%E7%B5%84%E3%82%93%E3%81%A0%E3%81%8B%E3%82%89
+
+振り返りしてて見つけた。
+本当に爆発しそうだったし、随分と長いこと尾を引いたよ。
+
+落ちた連絡が来たあと、1時間も独り言を録音するくらいにはね。
+
+少なくとも僕の人生のなかでは上位に入る本気度で取り組んだと思う。
+だけれど、考えることもある。
+
