--- a/tweet/2020/12.md
+++ b/tweet/2020/12.md
@@ -3,3 +3,55 @@
 ## いつの間にか12月になってしまった
 
 11月、12月は全く書けなかったので、12月は増やしていき。
+
+##11月21日からクラスター株式会社でインターンをはじめた
+
+もう1ヶ月とすこし経った。
+3ヶ月更新のアルバイト契約で雇ってもらっている。
+今は1週間のお休みをもらっている。
+自分に振ってもらっていたタスクが思うように進んでおらず、体調や精神状態も不安定だったので少し休みをもらった。
+メンターは自分のために強力にサポートしていただいている。
+ほぼ毎日1on1を行って日々の不安や困りごとを解決に導いてくれる。
+クラスターでの働き方の他、ソフトウェアエンジニアとしての生き方、開発のやり方、細かなプログラミング知識など、多岐にわたる助言をくださる。
+
+#### 自分がクラスターで働く上での問題点
+
+僕はコミュニケーションのことを考えるのは好きだが、実際にコミュニケーションをとるのは苦手だ。
+最初にメンターにフィードバックをもらったのはこのことだった。
+発言が少ないのでslackでもっと質問や進捗報告などを頻繁にしよう。
+僕は発言する抵抗が異常に高い。
+間違ったことを言うことをどうしても避けようとして考え込んでしまうのだ。
+自分の理解は知識あ間違っていることを誰かに知られるのが怖い。
+この考えは自分や所属組織の成長を鈍らせるので避けるべきだということは頭では理解しているつもりだが、体に染み付いて簡単には抜けてくれない。
+どうしたものかとメンターもいくつかの解決案を提示してくた。
+疑問をscrapboxにまとめておいて、後にまとめて質問する方式。
+これはうまく行って分からないことを今までよりも素早く解決することができた。
+しかし、まとめて聞くよりも都度聞いたほうが、分からないことで作業がつまることが無いのでそうしたい。
+次にslackに専用チャンネルを作って僕が進捗や困ったこと、質問を流すことにした。
+これは最初はうまく行ったが、段々と発言が少なくなってしまった。
+outroomチームに配属された頃からだっただろうか。
+クラスターで働くことになれてきた頃で、質問する内容がクラスターのドメイン知識というよりは、プログラミング技能に関することが増えてきた。
+これは僕にとって大きな違いで、プログラミング技能は知ってて当たり前のような認知が抜けなくて、無知を晒すことができなかった。
+
+そうだ、slackにアプレンティスシップパターンの無知を晒すパターンを毎朝流すのは良いかもれないな。
+あと、STEP by STEP UP↑↑↑↑を流すのも良いかも!
+
+## 初めて髪を染めた
+
+ブリーチしてベージュっぽい色でお願いした。
+美容室は最近よく行ってたBelle。表参道店は初めて行った。
+ブリーチしたときにかなり頭皮が痛かった。
+ベージュは3日くらいで落ちてきて、そのあとはほぼ金髪だった。
+明るい色にすると変わったことは、初対面の人の反応。お店とかに行くと黒髪のときと比べて無下な対応をされない気がする。
+もちろん初対面なので人による違いかもしれないが。
+変わると思ってたけど意外にも変わらなかったのは自分の気持ちだ。
+自信がもてるようになることを想像していたけど正直変わらない。
+普段自分の髪が見えないので見た目に変化がないし、変わらなくてもおかしくはないのだけれど。
+良かったことは純粋に楽しい。
+髪は身体のイメージに大きく作用することを改めて理解した。
+洋服や体型が違えば別人のようになれるけれど、髪もそれなりの影響力がある。
+髪色を変えるだけで色々な姿になれるのはとても楽しいと感じた。
+これからもっと様々な色を試してみたいと思ってる。
+悪かったことは、髪質が悪化したこと。
+これまではサラサラの髪で手ぐしが通らないことはなかったのだけれど、キシキシになってしまった。
+髪をとかしたりするわけではないので困ってはいないが、残念だとは思う。
